Fixing bug: No content on website.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Urlaubsfotos</title>
   </head>
   <body>
-  
+    <h1>Das wird eine Urlaubswebseite!</h1>      
+    <p>Ein kleiner Absatz</p>
   </body>
 </html>
