Adding a dot to the end of the sentence.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <h1>Das wird eine Urlaubswebseite!</h1>      
-    <p>Ein kleiner Absatz</p>
+    <p>Ein kleiner Absatz.</p>
   </body>
 </html>
