Adding another paragraph for our website

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <body>
     <h1>Das wird eine Urlaubswebseite!</h1>      
     <p>Ein kleiner Absatz</p>
+    <p>Und das hier ist noch ein weiterer Absatz.</p>
   </body>
 </html>
