--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Das wird eine Urlaubswebseite!</h1>      
     <p>Ein kleiner Absatz</p>
     <p>Und das hier ist noch ein weiterer Absatz.</p>
+    <p>In Europa gibt es viele gute Reiseziele</p>
   </body>
 </html>
