Changing the background color to gray

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Urlaubsfotos</title>
   </head>
-  <body>
+  <body style="background-color: rgb(200, 200, 200)">
     <h1>Das wird eine Urlaubswebseite!</h1>      
     <p>Ein kleiner Absatz</p>
     <p>Und das hier ist noch ein weiterer Absatz.</p>
