Adding more content

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <p>Ein kleiner Absatz</p>
     <p>Und das hier ist noch ein weiterer Absatz.</p>
     <p>In Europa gibt es viele gute Reiseziele</p>
+    <p>Nochmal mehr Inhalt!</p>
   </body>
 </html>
