--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body style="background-color: rgb(200, 200, 200)">
     <h1>Das wird eine Urlaubswebseite!</h1>      
-    <p>Ein kleiner Absatz</p>
+    <p>Ein kleiner Absatz.</p>
     <p>Und das hier ist noch ein weiterer Absatz.</p>
     <p>In Europa gibt es viele gute Reiseziele</p>
     <p>Nochmal mehr Inhalt!</p>
