--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Urlaubsfotos!</title>
   </head>
   <body style="background-color: rgb(255, 255, 255)">
-    <h1>Das wird eine Urlaubswebseite!</h1>      
-    <p>Ein kleiner Absatz.</p>
+    <h1>Das wird eine Urlaubswebseite!</h1>
+    <p style="color:red;">Ein kleiner Absatz.</p>
     <p>Und das hier ist noch ein weiterer Absatz.</p>
     <p>In Europa gibt es viele gute Reiseziele</p>
     <p>Nochmal mehr Inhalt!</p>
