Fixing the background color. Fixes #2.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Urlaubsfotos!</title>
   </head>
-  <body style="background-color: rgb(245, 245, 245)">
+  <body>
     <h1>Das wird eine Urlaubswebseite!</h1>
     <p style="color:red;">Ein kleiner Absatz.</p>
     <p>Und das hier ist noch ein weiterer Absatz.</p>
